--- a/temp_gridsearch.ipynb
+++ b/temp_gridsearch.ipynb
@@ -54,10 +54,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "parameters = {'kernel':('linear', 'rbf'), 'C':[1, 10,20,100]}\r\n",
+    "parameters = {'kernel':('linear', 'rbf','poly'), 'C':[1, 10,20,100]}\r\n",
     "svc = SVC(gamma='auto')\r\n",
     "clf = GridSearchCV(svc, parameters,cv=5,return_train_score=False)\r\n",
-    "clf.fit(x,y.iloc[:5000,:].values.ravel())\r\n",
+    "clf.fit(x,y.iloc[:5000,:].values\r\n",
     "results=pd.DataFrame(clf.cv_results_)\r\n",
     "print(results)"
    ]
@@ -72,16 +72,8 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": ""
   },
   "orig_nbformat": 4
  },
