--- a/ex_var.ipynb
+++ b/ex_var.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,24 +12,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3541, 220)\n",
-      "6.09389656820776\n"
+      "(17500, 354)\n",
+      "0.7383919489335855\n"
      ]
     }
    ],
    "source": [
     "#read the data from the original CSV \r\n",
-    "data=pd.read_csv(r\"D:\\Windsor\\Fourth semester\\Applied Machine learning\\Project\\Datasets\\Datasets\\D13.csv\",header=None)\r\n",
+    "data=pd.read_csv(r\"D:\\Windsor\\Fourth semester\\Applied Machine learning\\Project\\Datasets\\Datasets\\D1.csv\",header=None)\r\n",
     "\r\n",
     "#List of dimension reduced datasets\r\n",
-    "DR_datasets={'Conformal Eigenmaps':r\"D:\\Windsor\\Fourth semester\\Applied Machine learning\\Project\\Code_Machine_learning\\DimensionReducedDataSet\\D13_CE.csv\",'Maximum Variance Unfolding':r\"D:\\Windsor\\Fourth semester\\Applied Machine learning\\Project\\Code_Machine_learning\\DimensionReducedDataSet\\D13_MVU.csv\", \"Landmark MVU\": r\"D:\\Windsor\\Fourth semester\\Applied Machine learning\\Project\\Code_Machine_learning\\DimensionReducedDataSet\\D13_LMVU.csv\"}\r\n",
+    "DR_datasets={'Conformal Eigenmaps':r\"D:\\Windsor\\Fourth semester\\Applied Machine learning\\Project\\Code_Machine_learning\\DimensionReducedDataSet\\D1_CE.csv\",'Maximum Variance Unfolding':r\"D:\\Windsor\\Fourth semester\\Applied Machine learning\\Project\\Code_Machine_learning\\DimensionReducedDataSet\\D1_MVU.csv\", \"Landmark MVU\": r\"D:\\Windsor\\Fourth semester\\Applied Machine learning\\Project\\Code_Machine_learning\\DimensionReducedDataSet\\D1_LMVU.csv\"}\r\n",
     "\r\n",
     "#Separating the data and the labels\r\n",
     "x=data.iloc[:,:-1]\r\n",
@@ -47,16 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ev of Conformal Eigenmaps: [4.527511562095565e-05, 7.608034928670869e-07, 4.0783283115666615e-09, 2.5227908260582457e-05, 2.1109646273811292e-05, 4.787876632911432e-11, 4.305901163280504e-05, 3.078533833954496e-06, 1.5514283697094398e-09, 4.609047134363581e-05, 6.24943347057011e-10, 1.0561748005381314e-10, 4.634848329898609e-05, 7.225676420443382e-11, 6.474615146509378e-11, 4.390606545189697e-05, 2.339427450839491e-06, 5.217667670447702e-10, 3.645429460571217e-05, 9.877418590897201e-06, 1.4312451714826826e-09, 4.514266802802821e-05, 1.210489724198561e-06, 8.867174463472807e-10, 3.077537009040786e-05, 1.5559271760897658e-05, 1.033613850898564e-08] and max ev is 4.634848329898609e-05\n",
-      "ev of Maximum Variance Unfolding: [0.005737342317539134, 0.001811350020018343, 3.721753981272095e-09, 0.010680658730619252, 0.00441792687250092, 1.7048198895944472e-10, 0.0067009011326724065, 0.0009942757799556272, 8.477776463060603e-10, 0.02730872825733677, 7.362928524467505e-11, 1.769777792008546e-11, 0.002144349976001348, 2.7759159650461562e-05, 1.7812477673432834e-10, 0.0023011405632925395, 0.0003832813408656716, 2.4644650633613175e-05, 0.0012009257947761596, 5.856892135730143e-05, 1.479200459387751e-11, 0.0007521195766309106, 0.0003407657132576909, 1.172491562676489e-05, 0.0002298025298460576, 4.5336503316258775e-06, 7.675613060029172e-11] and max ev is 0.02730872825733677\n",
-      "ev of Landmark MVU: [2.3462064736878644e-08, 3.612318746771689e-08, 2.8792541326461065e-07, 7.233234902620896e-08, 1.8580074019847586e-13, 1.4103047254081677e-15, 1.1652091514421214e-08, 1.3689265136132274e-09, 1.736356803706415e-07, 4.5183211209467085e-08, 3.074942752763207e-14, 1.2113961957974948e-15, 5.328232746814956e-13, 1.9128277669392663e-13] and max ev is 2.8792541326461065e-07\n"
+      "ev of Conformal Eigenmaps: [6.620306760947506e-05, 1.0130668231797236e-05, 1.0990499981545971e-08, 7.704126500734031e-05, 3.348853709727518e-07, 1.7449749400090114e-09, 1.0202092974114171e-05, 1.022140068516782e-05, 1.0210302022227554e-05] and overall ev is 0.00018435641737601647\n",
+      "ev of Maximum Variance Unfolding: [0.002211940252181548, 0.00033413343798390914, 6.760782983753336e-10, 9.244189709515607e-06, 1.3722384115180526e-06, 5.164381580642877e-07, 0.008761180600877745, 0.000805399645056288, 0.00016660808642142574] and overall ev is 0.012290395564878313\n",
+      "ev of Landmark MVU: [1.3659252420331505e-10, 0.17825258195583193, 0.006583208147311081, 0.0001253936386942132, 0.004160054935519003, 4.7825633913243495e-05] and overall ev is 0.189169064447862\n"
      ]
     }
    ],
@@ -86,10 +86,11 @@
     "\r\n",
     "    ev=varD/varM\r\n",
     "\r\n",
-    "    if ev.mean()>1:\r\n",
-    "        ev=1/ev\r\n",
+    "    for j in range(len(ev)):\r\n",
+    "        if ev[j]>1:\r\n",
+    "            ev[j]=1/ev[j]\r\n",
     "\r\n",
-    "    print(\"ev of {}: {} and max ev is {}\".format(i,list(ev),max(ev)))"
+    "    print(\"ev of {}: {} and overall ev is {}\".format(i,list(ev),sum(ev)))"
    ]
   },
   {
